2004/01/29 20:03 (-0500) rwmcfa1

	* Glib.pm, README: unstable release 1.033

	* NEWS: updated

	1.032 isn't going public, was a test failure with no DISPLAY in Gtk2

2004/01/29 18:44 (-0500) rwmcfa1

	* Glib.pm, README: unstable release 1.032

	* NEWS: updated

2004/01/27 11:44 (-0500) rwmcfa1

	* ParseXSDoc.pm, GenPod.pm: added a new =for type, see_also which
	allows for appending things to see onto the end of the apidoc 
	autogenerated SEE ALSO sections, much desired/asked for feature. code
	added to ParseXSDoc to find them and GenPod to use them.

2004/01/27 10:44 (-0500) rwmcfa1

	* MakeHelper.pm: provide a mechinism for over-ridding the global 
	variables in GenPod.

	* GenPod.pm: doc how to go about over-ridding the global vars.

2004/01/25 03:44 (-0500) muppetman

	* Glib.pm, README: unstable release 1.031

	* NEWS, MANIFEST.SKIP: updated

2004/01/25 01:00 (-0500) muppetman

	A NEWS
	M MANIFEST
	  add a file to summarize changes
	
	* GObject.xs: add freeze_notify and thaw_notify.

	* GenPod.pm: add gshort and gushort to %basic_types, and FIXME
	notice on %basic_types to remind me that it needs to be extensible.
	remove the gchar=>integer mapping, since it conflicts with
	gchar=>string (the * is implied, you see)

	* Glib.pm: add exportable constants under a 'constants' tag.

2004/01/24 21:44 (-0500) rwmcfa1

	* MakeHelper.pm: added dist-srpms target, removed doc refering to 
	runtime_reqs as it has been replaced by the pkg-config trick

	* Makefile.PL: removed runtime_reqs stuff, replaced by the pkg-config 
	trick
	
	* perl-Glib.spec.in: use pkg-config for Requires version

2004/01/22 09:44 (-0500) rwmcfa1

	* MakeHelper.pm: and i thought i was done. don't know what i was 
	thinking with the last one, laying in bed sleepless last night the 
	problem came to me. this is another attempt at a solution. this one 
	will work, but depends on makefile conditionals which may not be as 
	portable as i would like. also a fix to prevent the mkdir change from 