@@ -1,3 +1,8 @@
+2004/01/30 22:36 (-0500) muppetman
+
+	* Subclass.pm: pass all unknown import parameters through to
+	Glib::Type->register_object.
+
 2004/01/29 20:03 (-0500) rwmcfa1
 
 	* Glib.pm, README: unstable release 1.033
